--- a/index.html
+++ b/index.html
@@ -101,19 +101,16 @@
 
       <div class="mt-2 mx-auto col-12 col-md-6">
         <div class="input-group input-group-sm mb-3">
-          <span class="input-group-text" id="inputGroup-sizing-sm">Item name</span>
-          <input type="text" class="form-control" aria-label="Sizing example input"
-            aria-describedby="inputGroup-sizing-sm" id="item-name-input" />
+          <span class="input-group-text">Item name</span>
+          <input type="text" class="form-control" id="item-name" />
         </div>
         <div class="input-group input-group-sm mb-3">
-          <span class="input-group-text" id="inputGroup-sizing-sm">Price</span>
-          <input type="number" class="form-control" aria-label="Sizing example input"
-            aria-describedby="inputGroup-sizing-sm" id="item-price-input" />
+          <span class="input-group-text">Price</span>
+          <input type="number" class="form-control" id="item-price" />
         </div>
         <div class="input-group input-group-sm mb-3">
-          <span class="input-group-text" id="inputGroup-sizing-sm">Quantity</span>
-          <input type="number" class="form-control" aria-label="Sizing example input"
-            aria-describedby="inputGroup-sizing-sm" id="item-quantity-input" />
+          <span class="input-group-text">Quantity</span>
+          <input type="number" class="form-control" id="item-quantity" />
         </div>
         <button type="button" class="btn btn-primary" id="add-details-btn">Add </button>
       </div>
@@ -151,9 +148,8 @@
           <div class="col">
             <div class="color-4 p-3 h-100 rounded">
               <span class='text-warning'>
-                Seller.
-              </span> <br>
-              <span>example@gmail.com</span>
+                Seller Email:
+              </span>
             </div>
           </div>
         </div>
@@ -228,10 +224,6 @@
         </div>
       </div>
       <!-- end of bottom part -->
-      <p>
-        Get started by creating a new file or uploading an existing file. We recommend every repository include a
-        README, LICENSE, and .gitignore.
-      </p>
     </div>
   </section>
   <section class='d-flex justify-content-center align-items-center mt-5 mb-4'>
@@ -241,7 +233,7 @@
   </section>
   <footer class='color-1 text-center'>
     <p class='p-4'>
-      All rights reserve @shda.com
+      All rights reserve @tamal
     </p>
 
   </footer>
@@ -249,6 +241,7 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
   <script src="script.js"></script>
+  <!-- <script src="app.js"></script> -->
 
 </body>
 
