--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=The+Nautigal:wght@700&display=swap"
     rel="stylesheet" />
 
-  <title>Hello, world!</title>
+  <title>JS invoice App</title>
 
   <style>
     body {
